# savant-rs

./: .dockerignore  .envrc  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  RELEASING.md  build.rs  install_deps.sh  pyproject.toml  release-order.txt  requirements-docs.txt  requirements.txt
etcd_dynamic_state/: Cargo.toml  docker-compose.yml
etcd_dynamic_state/src/: etcd_api.rs  lib.rs  parameter_storage.rs
sample_plugin/:  build.rs  Cargo.toml  pyproject.toml
sample_plugin/.cargo/: config.toml
sample_plugin/src/: lib.rs
savant/: Cargo.toml  build.rs
savant/benches/: batch_snapshot.rs  bboxes.rs  bench_object_filter.rs  bench_udf.rs  message_save_load.rs
savant/capi/: savant_rs.h
savant/src/: capi.rs  cplugin.rs  lib.rs  log_py.rs  logging.rs  primitives.rs  python_api.rs  test.rs  tests_pyo3_access.rs  utils.rs
savant/src/primitives/: attribute.rs  attribute_value.rs  bbox.rs  draw.rs  eval_context.rs  message.rs  point.rs  polygonal_area.rs  proxy.rs  pyobject.rs  segment.rs
savant/src/utils/: bbox.rs  byte_buffer.rs  conversions.rs  eval_resolvers.rs  np.rs  otlp.rs  pluggable_udf_api.rs  propagation_context.rs  python.rs  (+1 more)
savant_algebra/: Cargo.toml
savant_algebra/src/: conversions.rs  lib.rs  np.rs
savant_capi/: Cargo.toml  build.rs
savant_capi/capi/: README.md  savant_capi.h  savant_rs.h
savant_capi/src/: capi.rs  lib.rs  pipeline.rs
savant_core/: Cargo.toml  build.rs
savant_core/benches/: bench_batch_snapshot.rs  bench_bbox_utils.rs  bench_bboxes.rs  bench_check_frame_fit.rs  bench_frame_save_load_pb.rs  bench_json_attrs.rs  bench_label_filter.rs  bench_message_save_load.rs  bench_object_filter.rs  bench_pipeline.rs  bench_udf.rs  bench_zmq.rs  json_attrs.rs  message_save_load.rs  pipeline.rs  pipeline2.rs
savant_core/examples/: rtp_pts_mapper.rs
savant_core/savant_core/: Cargo.toml  README.md  build.rs
savant_core/savant_core_py/: Cargo.toml  README.md  build.rs
savant_core/src/: atomic_f32.rs  consts.rs  cplugin.rs  deadlock_detection.rs  draw.rs  eval_cache.rs  eval_context.rs  eval_resolvers.rs  gstreamer.rs  json_api.rs  label_template.rs  lib.rs  macros.rs  match_query.rs  message.rs  metric.rs  metrics.rs  otlp.rs  pipeline.rs  pipeline2.rs  pluggable_udf_api.rs  primitives.rs  protobuf.rs  rwlock.rs  savant_rs.proto  savant_rwlock.rs  symbol_mapper.rs  telemetry.rs  test.rs  transmutes.rs  utils.rs  webserver.rs
savant_core_py/: Cargo.toml  README.md  build.rs
savant_core_py/src/: capi.rs  draw_spec.rs  gst.rs  lib.rs  logging.rs  match_query.rs  metric.rs  metrics.rs  pipeline.rs  primitives.rs  services.rs  telemetry.rs  utils.rs  webserver.rs  zmq.rs
savant_deepstream/buffers/: Cargo.toml  README.md  build.rs
savant_deepstream/decoders/: Cargo.toml  README.md
savant_deepstream/deepstream/: Cargo.toml  README.md
savant_deepstream/deepstream-sys/: Cargo.toml  build.rs  gstnvdsmeta_rs.h
savant_deepstream/deepstream_encoders/: Cargo.toml  build.rs  pyproject.toml
savant_deepstream/deepstream_nvbufsurface/: Cargo.toml  build.rs  nvbufsurface_rs.h  nvbufsurftransform_rs.h  pyproject.toml
savant_etcd/: Cargo.toml  README.md  docker-compose.yml
savant_etcd/src/: etcd_api.rs  lib.rs
savant_etcd/utils/: gen_keys.sh  run_etcd.sh  run_etcd_with_tls.sh
savant_etcd_dynamic_state/: Cargo.toml  pyproject.toml
savant_etcd_dynamic_state/src/: lib.rs
savant_gstreamer/: Cargo.toml  pyproject.toml
savant_gstreamer/pytests/: test_mp4_muxer.py
savant_gstreamer/savant_gstreamer/: Cargo.toml  README.md
savant_gstreamer/savant_gstreamer_py/: Cargo.toml
savant_gstreamer/src/: codec.rs  id_meta.rs  lib.rs  mp4_muxer.rs  python.rs  video_format.rs
savant_gstreamer_elements/: Cargo.toml
savant_gstreamer_elements/src/: lib.rs  py_handler.rs  rspy.rs  utils.rs  zeromq_src.rs
savant_info/: Cargo.toml  README.md
savant_info/src/: main.rs
savant_launcher/: Cargo.toml  README.md
savant_launcher/assets/: entrypoint.py  mymod.py  shared_state.py
savant_launcher/src/: main.rs
savant_perception/: Cargo.toml  README.md
savant_perception/assets/: ny_city_center.mov
savant_perception/examples/: README.md
savant_perception/src/: actor.rs  addr.rs  builder.rs  context.rs  envelope.rs  envelopes.rs  errors.rs  handler.rs  instrument.rs  lib.rs  loop_driver.rs  message_ex.rs  messages.rs  operator_sink.rs  registry.rs  router.rs  shared.rs  shutdown.rs  stage_metrics.rs  stages.rs  supervisor.rs  system.rs  templates.rs
savant_pq/: Cargo.toml
savant_pq/benches/: throughput.rs
savant_pq/src/: lib.rs
savant_protobuf/: Cargo.toml  README.md  build.rs
savant_protobuf/src/: generated.rs  lib.rs  protocol.rs  savant_rs.proto
savant_python/: Cargo.toml  README.md  build.rs  pyproject.toml  test-report-deepstream.md
savant_python/capi/: savant_capi.h
savant_python/pytests/: conftest.py  deepstream_helpers.py  picasso_helpers.py  test_atomic_counter.py  test_attribute.py  test_attribute_value.py  test_decoder_pool.py  test_deepstream_batched.py  test_deepstream_config.py  test_deepstream_enums.py  test_deepstream_generator.py  test_deepstream_heterogeneous.py  test_deepstream_jetson.py  test_deepstream_surface_view.py  test_deepstream_transform.py  test_draw_spec.py  test_flexible_decoder.py  test_flexible_decoder_config_callback.py  test_geometry.py  test_gstreamer.py  test_kvs.py  test_logging.py  test_match_query.py  test_metrics.py  test_misc_tracks.py  test_mp4_demuxer.py  test_mp4_muxer.py  test_multistream_decoder.py  test_nvinfer.py  test_nvtracker.py  test_nvtracker_batching.py  test_picasso_e2e.py  test_picasso_init.py  test_picasso_pipeline.py  test_pipeline.py  test_primitives.py  test_retina_rtsp.py  test_serialization.py  test_shared_buffer.py  test_symbol_mapper.py  (+8 more)
savant_python/src/: capi.rs  draw_spec.rs  lib.rs  logging.rs  match_query.rs  persistent_queue.rs  pipeline.rs  pipeline2.rs  primitives.rs  test.rs  utils.rs  zmq.rs
savant_samples/: Cargo.toml  README.md
savant_samples/src/: assets.rs  cars_tracking.rs  channels.rs  cli.rs  framework.rs  lib.rs
(+1511 files in other folders)
