[workspace]
resolver = "2"
members = [
    "savant_etcd",
    "savant_core/savant_core",
    "savant_core/savant_core_py",
    "savant_python",
    "savant_protobuf",
    "savant_gstreamer/savant_gstreamer",
    "savant_info",
    "services/replay/replaydb",
    "services/replay/replay",
    "services/retina_rtsp",
    "services/router",
    "services/buffer_ng",
    "services/meta_merge",
    "services/common",
    "savant_deepstream/deepstream_sys",
    "savant_deepstream/deepstream",
    "savant_deepstream/buffers",
    "savant_deepstream/encoders",
    "savant_deepstream/decoders",
    "savant_deepstream/inputs",
    "savant_deepstream/nvidia_gpu_utils",
    "savant_deepstream/nvinfer",
    "savant_deepstream/nvtracker",
    "savant_deepstream/picasso",
    "savant_perception",
]

default-members = [
    "savant_core/savant_core",
    "savant_core/savant_core_py",
    "savant_python",
    "savant_protobuf",
]

[workspace.package]
version = "2.1.1"
edition = "2021"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
# Fallback description; every publishable crate overrides with a specific one.
description = "Savant: optimized Rust primitives and services for real-time video analytics pipelines."
homepage = "https://insight-platform.github.io/savant-rs/"
repository = "https://github.com/insight-platform/savant-rs"
documentation = "https://docs.rs"
readme = "README.md"
keywords = ["savant", "video", "streaming", "gstreamer"]
categories = ["multimedia::video", "algorithms", "data-structures"]
license = "Apache-2.0"
rust-version = "1.83"
include = ["src/**/*", "build.rs", "README.md", "LICENSE", "Cargo.toml"]

[workspace.dependencies]
actix-ws = "0.3.0"
actix-web = "4"
anyhow = "1.0"
async-trait = "0.1"

base64 = { version = "0.22" }
bincode = { version = "2" }
bitcode = "0.6.6"
bindgen = "0.72"
bollard = "0.18"


candle-core = "0.9"
cbindgen = "0.24"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
colored = "3"
crc32fast = "1"
criterion = "0.7"
cros-codecs = "0.0.5"
crossbeam = "0.8"
cudarc = { version = "0.17", features = ["cuda-12020"] }
ctrlc = "3"

derive_builder = "0.20"

env_logger = "0.11"
etcd-client = { version = "0.14", features = ["tls"] }
evalexpr = { version = "11", features = ["rand", "regex_support"] }

futures = "0.3.14"
futures-util = "0.3"

geo = "=0.28"
gl = "0.14"
glib = "0.22"
glob = "0.3"
globset = "0.4"

gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-base = "0.25"
gstreamer-video = "0.25"
gstreamer-audio = "0.25"
gstreamer-rtp = "0.25"
gst-plugin-version-helper = "0.8"

half = "2.5"
hashbrown = { version = "0.15", features = ["serde"] }

image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
imagehash = "0.3"

jfifdump = "0.6"
jmespath = { version = "0.3", features = ["sync"] }

lazy_static = "1.5"
lru = { version = "0.16", features = ["hashbrown"] }
log = "0.4"

md-5 = "0.10"
mini-moka = "0.10"
moka = { version = "=0.12.10", features = ["future"] }

nix = { version = "0.29", features = ["process", "signal"] }
nom = "7"
num-bigint = "0.4"
num-traits = "0.2"
nvml-wrapper = "0.12"
numpy = "0.28"

opentelemetry = "=0.24"
opentelemetry-otlp = { version = "=0.17", features = [
    "http-json",
    "http-proto",
    "tls",
    "reqwest-rustls",
] }
opentelemetry-jaeger-propagator = "0.3.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"

parking_lot = { version = "0.12", features = ["deadlock_detection"] }
pretty_env_logger = "0.5"
prometheus-client = "0.23"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
pyo3 = "0.28.2"
pyo3-build-config = "0.28.2"

rand = "0.9"
rayon = "1.10"
regex = "1"
replaydb = { path = "services/replay/replaydb", version = "2.1.1", package = "savant-replaydb" }
replay = { path = "services/replay/replay", version = "2.1.1", package = "savant-replay" }
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls-native-roots",
    "json",
] }
retina = "=0.4.15"
retina_rtsp = { path = "services/retina_rtsp", version = "2.1.1", package = "savant-retina-rtsp" }
rocksdb = { version = "0.23", default-features = false, features = [
    "bindgen-runtime",
    "lz4",
] }
ring = "0.17"

# Savant internal crates — major-only version keeps future bumps to a single edit in
# [workspace.package].version; the `package =` alias preserves existing `use foo::...` imports
# while the on-crates.io name becomes the kebab-case savant-* form.
savant_etcd = { path = "savant_etcd", version = "2.1.1", package = "savant-etcd" }
savant_core = { path = "savant_core/savant_core", version = "2.1.1", package = "savant-core" }
savant_core_py = { path = "savant_core/savant_core_py", version = "2.1.1", package = "savant-core-py" }
savant_protobuf = { path = "savant_protobuf", version = "2.1.1", package = "savant-protobuf" }
savant_rs = { path = "savant_python", version = "2.1.1", package = "savant-rs" }
savant_gstreamer = { path = "savant_gstreamer/savant_gstreamer", version = "2.1.1", package = "savant-gstreamer" }
savant_services_common = { path = "services/common", version = "2.1.1", package = "savant-services-common" }

# DeepStream family
deepstream_sys = { path = "savant_deepstream/deepstream_sys", version = "2.1.1", package = "savant-deepstream-sys" }
deepstream = { path = "savant_deepstream/deepstream", version = "2.1.1", package = "savant-deepstream" }
deepstream_buffers = { path = "savant_deepstream/buffers", version = "2.1.1", package = "savant-deepstream-buffers" }
deepstream_encoders = { path = "savant_deepstream/encoders", version = "2.1.1", package = "savant-deepstream-encoders" }
deepstream_decoders = { path = "savant_deepstream/decoders", version = "2.1.1", package = "savant-deepstream-decoders" }
deepstream_inputs = { path = "savant_deepstream/inputs", version = "2.1.1", package = "savant-deepstream-inputs" }
deepstream_nvinfer = { path = "savant_deepstream/nvinfer", version = "2.1.1", package = "savant-deepstream-nvinfer" }
deepstream_nvtracker = { path = "savant_deepstream/nvtracker", version = "2.1.1", package = "savant-deepstream-nvtracker" }
picasso = { path = "savant_deepstream/picasso", version = "2.1.1", package = "savant-picasso" }
nvidia_gpu_utils = { path = "savant_deepstream/nvidia_gpu_utils", version = "2.1.1", package = "savant-nvidia-gpu-utils" }
savant_perception = { path = "savant_perception", version = "2.1.1", package = "savant-perception-framework" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serial_test = "3"
# Binary version must stay in sync with SKIA_BINARIES_VERSION in .envrc and utils/build.sh
skia-safe = { version = "0.93.1", features = ["gl", "egl", "textlayout"] }

tempfile = "3"
thiserror = "2"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
tokio-timerfd = "0.2"
tonic = { version = "0.12.2", features = ["tls-native-roots"] }
twelf = { version = "0.15", features = [
    "json",
    "env",
    "shellexpand",
], default-features = false }

uuid = { version = "1", features = ["fast-rng", "v7"] }
url = "2.5"

zmq = "0.10"

[profile.release]
opt-level = 3
codegen-units = 1

[profile.bench]
opt-level = 3
codegen-units = 1
