[package]
name = "etcd_dynamic_state"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace =  true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
futures = "0.3"
etcd-client = "0.11"
async-trait = "0.1"
thiserror = "1"
glob = "0.3"
hashbrown = "0.14"
parking_lot = "0.12"
crc32fast = "1.3"
env_logger = "0.10"

[build-dependencies]
protoc-bin-vendored = "3"

[dependencies.tokio]
version = "1.28"
features = ["full"]
