[package]
name = "sample_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savant_rs = { path = "../savant" }
anyhow = "1"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.pyo3]
version = "0.18"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
