[package]
name = "sample_plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace =  true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savant_rs = { path = "../savant" }
anyhow = "1"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.pyo3]
version = "0.18"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.18"
cbindgen = "0.24"
