[package]
name = "savant_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace =  true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jmespath = { version = "0.3", features = ["sync"] }
lru = "0.10"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"
anyhow = "1.0"
thiserror = "1.0"
geo = "0.25"
rayon = "1.7"
pretty_env_logger = "0.5"
rkyv = { version = "0.7", features = ["validation", "archive_le"] }
numpy = {version = "0.18", features = ["nalgebra"]}
pyo3-log = "0.8"
derive_builder = "0.12"
num_cpus = "1.15"
hashbrown = "0.13"
lazy_static = "1.4"
nalgebra = "0.32"
ndarray = "0.15"
num-traits = "0.2"
parking_lot = {version = "0.12", features = ["deadlock_detection"]}
libloading = "0.8"
crc32fast = "1"
etcd_dynamic_state = { path = "../etcd_dynamic_state" }
evalexpr = { version = "11", features = ["rand", "regex_support"] }
log = "0.4"
field-offset = "0.3"
opentelemetry = "0.19"
opentelemetry-jaeger = "0.18"

[dependencies.pyo3]
version = "0.18"

[dependencies.tokio]
version = "1.28"
features = ["full"]

[dev-dependencies]
serial_test = "2.0"

[build-dependencies]
pyo3-build-config = "0.18"
cbindgen = "0.24"

[package.metadata.maturin]
python-source = "python"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
