[package]
name = "savant_algebra"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savant_rs = { path = "../savant_python" }
parking_lot = "0.12"
anyhow = "1"
opentelemetry = "0.19"
numpy = {version = "0.19", features = ["nalgebra"]}
nalgebra = "0.32"
ndarray = "0.15"
num-traits = "0.2"
log = "0.4"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.pyo3]
version = "0.19"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.19"
