[package]
name = "savant_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
evalexpr = { workspace = true }
hashbrown = { workspace = true }
geo = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# unique to savant_core
actix-web = "4"
bytes = "1.9"
crc32fast = "1"
crossbeam = "0.8"
derive_builder = "0.20"
etcd_dynamic_state = { git = "https://github.com/insight-platform/etcd_dynamic_state", tag = "0.2.12" }
etcd-client = { version = "0.13", features = ["tls"] }
jmespath = { version = "0.3", features = ["sync"] }
libloading = "0.8"
lru = { version = "0.12", features = ["hashbrown"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
prometheus-client = "0.22"
tonic = { version = "0.12.2", features = ["tls-native-roots"] }
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls-native-roots", "json"] }
opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-jaeger-propagator = "0.3.0"
prost = "0.12"
prost-types = "0.12"
rayon = "1.10"
regex = "1"
savant-protobuf = { git = "https://github.com/insight-platform/savant-protobuf", tag = "0.2.0" }

serde_yaml = "0.9"
uuid = { version = "1.11", features = ["fast-rng", "v7"] }
zmq = "0.10"
rand = "0.8.5"

[dependencies.tokio]
version = "1.42"
features = ["rt-multi-thread"]


[lib]
crate-type = ["dylib"]

[[bin]]
name = "plugin-loader"
path = "src/bin/plugin_loader.rs"

[dev-dependencies]
serial_test = "3"
bollard = "0.18"
futures-util = "0.3"
reqwest = "0.12"
env_logger = "0.11"