[package]
name = "savant_core_py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
savant_core = { workspace = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
geo = "0.26"
lazy_static = "1.4"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
evalexpr = { version = "11", features = ["rand", "regex_support"] }
log = "0.4"
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
colored = "2"
hashbrown = "0.14"

[dependencies.pyo3]
version = "0.21"

[dev-dependencies]
serial_test = "2.0"


[build-dependencies]
pyo3-build-config = "0.21"
cbindgen = "0.24"

[package.metadata.maturin]
python-source = "python"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
