[package]
name = "savant_core_py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
evalexpr = { workspace = true }
hashbrown = { workspace = true }
geo = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
pyo3 = { workspace = true }
savant_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }
cbindgen = { workspace = true }

[package.metadata.maturin]
python-source = "python"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
