[package]
name = "savant-etcd"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Async etcd helpers used by the Savant control plane."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["savant", "etcd", "async", "control-plane"]
categories = ["database", "asynchronous"]
license.workspace = true
rust-version.workspace = true

[lib]
name = "savant_etcd"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true } # "0.1"
crc32fast = { workspace = true }
env_logger = { workspace = true }
etcd-client = { workspace = true, features = ["tls", "tls-roots"] }
futures = { workspace = true }
glob = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
bollard = { workspace = true }
