[package]
name = "savant_gstreamer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
gst = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }

[lib]
crate-type = ["dylib"]
