[package]
name = "savant_gstreamer_elements"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow = { workspace = true }
hashbrown = { workspace = true }
pyo3 = { workspace = true }
savant_core_py = { workspace = true }
savant_core = { workspace = true }
gst = { workspace = true }
gst-base = { workspace = true }
gst-video = { workspace = true }
gst-audio = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }
gst-plugin-version-helper = { workspace = true }


