[[bin]]
name = "savant_info"
path = "src/main.rs"

[package]
name = "savant-info"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI helper that prints Savant build/package metadata (name, version, license, authors, …) in a shell-quotable form for CI and release tooling."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]
license.workspace = true
rust-version.workspace = true

[dependencies]
