[package]
name = "savant_launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
env_logger = { workspace = true }
anyhow = { workspace = true }
savant_rs = { workspace = true }
pyo3 = { workspace = true, features = ["auto-initialize"] }
log = "0.4.22"
clap = { workspace = true }