[package]
name = "savant_launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
log = "0.4.22"
pyo3 = { workspace = true, features = ["auto-initialize"] }
savant_rs = { workspace = true }
# savant_core_py = { workspace = true }
#gst = { workspace = true }
#gst-base = { workspace = true }
#gstreamer = { workspace = true }
#glib = { workspace = true }
