[package]
name = "savant_launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true, features = ["auto-initialize"] }
savant_rs = { workspace = true }
gstreamer = { workspace = true }
gstreamer-base = { workspace = true }
glib = { workspace = true }
